...
                          radius: 50.0,
                          child: Text('AS'),
                          backgroundColor: Color(0xFF0d1b2a),
                        ),
                      ),
                      TextButton(
                        key: ValueKey('signout'),
                        child: Text('SignOut'),
                        onPressed: () async {
                          auth.signOut();
                          Navigator.pushReplacement(
                              context,
                              MaterialPageRoute(
...
                              'Daily Transactions',
                              style: TextStyle(fontSize: 30.0),
                            ),
                          ),
                          SizedBox(width: 20.0),
                          FloatingActionButton(
                              key: ValueKey('addtxbutton'),
                              onPressed: () {
                                showDialog(
                                    context: context,
                                    builder: (context) => AddTx(
                                          key: Key('addtxwidget'),
                                          expense: newexp,
...
